# star_expiry_check

./: Dockerfile  README.md  action.yml  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: check.yaml
