[tool.poetry]
name = "star-expiry-check"
version = "0.1.0"
description = ""
authors = ["bboysoul <bboysoulcn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.2"
loguru = "^0.7.2"
feedparser = "^6.0.11"
html2text = "^2024.2.26"
rich = "^13.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
